--- a/platformio.ini
+++ b/platformio.ini
@@ -667,7 +667,8 @@ lib_deps          = ${common.lib_deps}
   Servo
 custom_marlin.USES_LIQUIDCRYSTAL = LiquidCrystal@1.0.0
 custom_marlin.NEOPIXEL_LED = Adafruit NeoPixel=https://github.com/p3p/Adafruit_NeoPixel/archive/1.5.0.zip
-build_flags       = ${common.build_flags} -DU8G_HAL_LINKS -IMarlin/src/HAL/LPC1768/include -IMarlin/src/HAL/LPC1768/u8g
+build_unflags = -g -ggdb
+build_flags       = ${common.build_flags} -DU8G_HAL_LINKS -IMarlin/src/HAL/LPC1768/include -IMarlin/src/HAL/LPC1768/u8g -fno-tree-scev-cprop -fno-split-wide-types -Wl,--relax -finline-limit=3 -ffast-math
   # debug options for backtrace
   #-funwind-tables
   #-mpoke-function-name
@@ -684,6 +685,8 @@ board     = nxp_lpc1768
 platform  = ${common_LPC.platform}
 extends   = common_LPC
 board     = nxp_lpc1769
+board_upload.maximum_size = 524288
+upload_speed  = 115200
 
 #################################
 #                               #
