--- a/platformio.ini
+++ b/platformio.ini
@@ -669,7 +669,8 @@ lib_deps          = ${common.lib_deps}
   Servo
 custom_marlin.USES_LIQUIDCRYSTAL = LiquidCrystal@1.0.0
 custom_marlin.NEOPIXEL_LED = Adafruit NeoPixel=https://github.com/p3p/Adafruit_NeoPixel/archive/1.5.0.zip
-build_flags       = ${common.build_flags} -DU8G_HAL_LINKS -IMarlin/src/HAL/LPC1768/include -IMarlin/src/HAL/LPC1768/u8g
+build_unflags = -g -ggdb
+build_flags   = ${common.build_flags} -DU8G_HAL_LINKS -IMarlin/src/HAL/LPC1768/include -IMarlin/src/HAL/LPC1768/u8g -fno-tree-scev-cprop -fno-split-wide-types
   # debug options for backtrace
   #-funwind-tables
   #-mpoke-function-name
